Your commit message

--- a/blog copy.html
+++ b/blog copy.html
@@ -697,7 +697,7 @@
                       <a href="#">Top 500</a>
                     </li>
                     <li>
-                      <a href="#">Contact Us</a>
+                      <a href="contact.html">Contact Us</a>
                     </li>
                   </ul>
                 </div>
