--- a/top100 - Copy.html
+++ b/top100 - Copy.html
@@ -661,7 +661,7 @@
 
               <li><a href="#">Top News</a></li>
               <li><a href="#">Top 500</a></li>
-              <li><a href="#">Contact Us</a> </li>
+              <li><a href="contact.html">Contact Us</a> </li>
               </ul>
             </div>
           </div>
