--- a/index.html
+++ b/index.html
@@ -1157,7 +1157,7 @@
                               <li><a href="#">Register Your Brand </a></li>
                               <li><a href="#">Top News</a></li>
                               <li><a href="#">Top 500</a></li>
-                              <li><a href="#">Contact Us</a> </li>
+                              <li><a href="contact.html">Contact Us</a> </li>
                            </ul>
                         </div>
                      </div>
